tests/e2e/gateway-sidecars/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg-sidecar-test
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      affinity: {}
      containers:
      - envFrom:
        - configMapRef:
            name: ssg-sidecar-test
        - secretRef:
            name: ssg-sidecar-test
        image: docker.io/caapim/gateway:11.2.1
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: gateway
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 9443
          name: management
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/license/license.xml
          name: gateway-license
          subPath: license.xml
        - mountPath: /tmp
          name: simple-sidecar
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/ssg-sidecar-test-listen-port-bundle
          name: ssg-sidecar-test-listen-port-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/0
          name: ssg-sidecar-test-repository-bundle-dest
        - mountPath: /graphman/config.json
          name: ssg-sidecar-test-repository-init-config
          subPath: config.json
      - command:
        - sh
        - -c
        - while true; do echo "logging" >> /tmp/logs.txt; sleep 1; done
        image: alpine:latest
        name: simple-sidecar
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: simple-sidecar
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gateway-license
        secret:
          defaultMode: 493
          items:
          - key: license.xml
            path: license.xml
          optional: false
          secretName: gateway-license
      - emptyDir: {}
        name: simple-sidecar
      - configMap:
          defaultMode: 493
          name: ssg-sidecar-test-listen-port-bundle
          optional: false
        name: ssg-sidecar-test-listen-port-bundle
      - emptyDir: {}
        name: ssg-sidecar-test-repository-bundle-dest
      - configMap:
          defaultMode: 493
          name: ssg-sidecar-test-repository-init-config
          optional: false
        name: ssg-sidecar-test-repository-init-config
status:
  replicas: 1
  readyReplicas: 1
